--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Rubik:wght@600&display=swap" rel="stylesheet">
-	<title></title>
+
+	<title>NASA</title>
+
 	<link rel="stylesheet" type="text/css" href="animate.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -394,7 +399,7 @@
 				<div class="col-lg-4">
 	                    <div class="feature d-flex">
 	                        <!-- <i class="fa fa-tablet feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 	                            <h5 class="feature__title">
 	                                Если звезда будет пролетать близко с черной дырой ее может разорвать на части
@@ -409,7 +414,7 @@
                <div class="col-lg-4">
 	                  <div class="feature d-flex">
 	                        <!-- <i class="fa fa-lemon-o feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 	                        	<div class="feature__block">
 		                            <h5 class="feature__title">
@@ -427,7 +432,7 @@
                <div class="col-lg-4">
 	                    <div class="feature d-flex">
 	                        <!-- <i class="fa fa-folder-o feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 		                        <div class="feature__block">
 		                            <h5 class="feature__title">
@@ -447,7 +452,7 @@
 				<div class="col-lg-4">
 	                    <div class="feature d-flex">
 	                        <!-- <i class="fa fa-code feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 		                        <div class="feature__block">
 		                            <h5 class="feature__title">
@@ -464,7 +469,7 @@
                <div class="col-lg-4">
 	                  <div class="feature d-flex">
 	                        <!-- <i class="fa fa-envelope-o  feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 		                        <div class="feature__block">
 		                            <h5 class="feature__title">
@@ -481,7 +486,7 @@
                <div class="col-lg-4">
 	                  <div class="feature d-flex">
 	                        <!-- <i class="fa fa-bookmark-o feature__icon"></i> -->
-	                        <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+	                        <svg  class="animated infinite heartBeat feature__icon star" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg>
 	                        <div class="feature__block">
 		                        <div class="feature__block">
 		                            <h5 class="feature__title">
@@ -504,12 +509,12 @@
            <div class="row">
                 <div class="col-lg-12">
                     <div class="title">
-                    	<svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+                    	
                         <h2 class="title__main blue">
-                            Свяжитесь с нами
+                        	 <!-- <svg id="star_icon_left" class="animated infinite heartBeat feature__icon star" height="2rem" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg> -->
+                        	 Свяжитесь с нами
+                        	 <!-- <svg id="star_icon_right" class="animated infinite heartBeat feature__icon star" height="2rem" viewBox="0 0 576 512"><style>svg</style><path class="star"/></svg> -->
                         </h2>
-                     <svg  class="animated infinite heartBeat feature__icon" xmlns="http://www.w3.org/2000/svg" height="em" viewBox="0 0 576 512"><style>svg</style><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>   
-
                         
                         <p class="title__text blue">
                            Астрономия побуждает душу взглянуть ввысь и уводит нас из этого мира в другой.
@@ -521,7 +526,7 @@
            <div class="row">
                 <div align="center">
 	                <form action="#" class="form"> 
-	                       <input type="email" placeholder="Введите ваш e-mail" class="form_input" required>
+	                       <input type="email" placeholder="Введите ваш e-mail" class="form-control form_input" required>
 	                       <button type="submit" class="button"> к звёздам </button>
 	                </form>
                 </div>
@@ -535,8 +540,8 @@
 	 		<div class="row">
 	 			<!-- <div class="col-lg-1 justify-content-center"> -->
 	 				<div class="footer_info justify-content-center">
-	 					<svg id="vk" class="icon_footer" xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><style>svg</style><path d="M31.4907 63.4907C0 94.9813 0 145.671 0 247.04V264.96C0 366.329 0 417.019 31.4907 448.509C62.9813 480 113.671 480 215.04 480H232.96C334.329 480 385.019 480 416.509 448.509C448 417.019 448 366.329 448 264.96V247.04C448 145.671 448 94.9813 416.509 63.4907C385.019 32 334.329 32 232.96 32H215.04C113.671 32 62.9813 32 31.4907 63.4907ZM75.6 168.267H126.747C128.427 253.76 166.133 289.973 196 297.44V168.267H244.16V242C273.653 238.827 304.64 205.227 315.093 168.267H363.253C359.313 187.435 351.46 205.583 340.186 221.579C328.913 237.574 314.461 251.071 297.733 261.227C316.41 270.499 332.907 283.63 346.132 299.751C359.357 315.873 369.01 334.618 374.453 354.747H321.44C316.555 337.262 306.614 321.61 292.865 309.754C279.117 297.899 262.173 290.368 244.16 288.107V354.747H238.373C136.267 354.747 78.0267 284.747 75.6 168.267Z"/></svg>
-	 				</dpppiv>
+	 					<svg id="vk" class="icon_footer" xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><style>svg</style><path id="vksvg"/></svg>
+	 				</div>
 	 		</div>
 	 	</div>
 	</footer>
@@ -548,6 +553,8 @@
 	</script>!-->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+	<script src="insert_svg.js"></script>
 
 </body>
 
