--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 	<!--Bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,9 +16,11 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Rubik:wght@600&display=swap" rel="stylesheet">
 
 	<title>NASA</title>
+	<link rel="icon" href="img/nasa_logo.png" sizes="32x32">
 
 	<link rel="stylesheet" type="text/css" href="animate.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style_mobile.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- jQuery -->
@@ -30,14 +31,14 @@
 	<nav class="navbar navbar-expand-sm navbar-dark">
 		<div class="container">
 			<a class="navbar-brand">
-				<img src="https://papik.pro/grafic/uploads/posts/2023-04/1681516094_papik-pro-p-logotip-nasa-vektor-3.png" width="50" height="50" alt="">
+				<img src="img/nasa_logo.png" width="50" height="50" alt="">
 			</a>
 
-    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nasamenu">
       		<span class="navbar-toggler-icon"></span>
     		</button>	
 
-			<div class="collapse navbar-collapse text-black" id="IDofMENU">			
+			<div class="collapse navbar-collapse text-black" id="nasamenu">			
 				<ul class="navbar-nav m-1">
 					<li class="nav-item mx-3">
 						<a class="nav-link" href="">Главная</a>
@@ -45,14 +46,13 @@
 					<li class="nav-item dropdown mx-3">
 						<a class="nav-link dropdown-toggle " href="#" id="navbar-dropdown" role="button" data-bs-toggle="dropdown">Космический объект</a>
 						<div class="dropdown-menu text-white">
-							<a class="dropdown-item" href="#cards">планеты</a>
-							<!-- <div class="dropdown-divider"></div> -->
-							<a class="dropdown-item" href="#">кометы</a>
-							<a class="dropdown-item" href="#">астероиды</a>
-							<a class="dropdown-item" href="#">звезды</a>
-							<a class="dropdown-item" href="#">экзопланеты</a>
-							<a class="dropdown-item" href="#">туманности</a>
-							<a class="dropdown-item" href="#">галактики</a>
+							<a class="dropdown-item" href="#cards">Планеты</a>
+							<a class="dropdown-item" href="#">Кометы</a>
+							<a class="dropdown-item" href="#">Астероиды</a>
+							<a class="dropdown-item" href="#">Звезды</a>
+							<a class="dropdown-item" href="#">Экзопланеты</a>
+							<a class="dropdown-item" href="#">Туманности</a>
+							<a class="dropdown-item" href="#">Галактики</a>
 						</div>
 					</li>
 				</ul>
@@ -257,7 +257,7 @@
 						<div class="col-lg-12">
 								<h2 class="title_main2"> Туманности </h2>
 						</div>			
-				</div>			
+				</div>		
 				<!--<div class="offer animated fadeInLeft">
 		         	<h7 class="offer__title animated fadeInLeft delay-2s">
 		            	туманность
@@ -387,7 +387,7 @@
 		<div class="row">
 				<div class="col-lg-12">
 					<div class="title">
-						<h2 class="title_main2"> интересных факты о космосе </h2>
+						<h2 class="title_main2"> Интересные факты о космосе </h2>
 						<p class="title_text"> </p>
 					</div>
 				</div>
