modified:   index.html 	modified:   insert_svg.js 	modified:   style.css 	modified:   style_mobile.css

--- a/index.html
+++ b/index.html
@@ -538,10 +538,12 @@
 	<footer id="footer" class="footer">
 	 	<div class="container">
 	 		<div class="row">
-	 			<!-- <div class="col-lg-1 justify-content-center"> -->
-	 				<div class="footer_info justify-content-center">
-	 					<svg id="vk" class="icon_footer" xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><style>svg</style><path id="vksvg"/></svg>
-	 				</div>
+	 			<div class="footer_info" align="center">
+	 				<svg id="vk" class="icon_footer" viewBox="0 0 448 512"><path id="vksvg"/></svg>	
+	 				<a href="https://t.me/testapp3_bot">
+	 					<svg id="tg" class="icon_footer" viewBox="0 0 496 512"><path id="tgsvg"/></svg>
+	 				</a>
+	 			</div>
 	 		</div>
 	 	</div>
 	</footer>
