--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
            <div class="row">
                 <div align="center">
 	                <form action="#" class="form"> 
-	                       <input type="email" placeholder="Введите ваш e-mail" class="form-control form_input" required>
-	                       <button type="submit" class="button"> к звёздам </button>
+	                       <input type="email" placeholder="Введите ваш e-mail" class="form-control form_input" id="email_field" required>
+	                       <button type="submit" class="button" id="email_button"> к звёздам </button>
 	                </form>
                 </div>
            </div>
@@ -547,12 +547,6 @@
 	 		</div>
 	 	</div>
 	</footer>
-
-	<!--<script type="text/javascript">
-	    $('#test').carousel({
-		interval:3000
-		});
-	</script>!-->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
